feat: refactor authentication checks and improve application state management

--- a/src/app/components/storage-stats/storage-stats.component.html
+++ b/src/app/components/storage-stats/storage-stats.component.html
@@ -40,7 +40,7 @@
             REFRESH
         </button>
         &nbsp;
-        <button mat-flat-button [disabled]="isClearing() || !nostr.isLoggedIn()" (click)="clearCache()">
+        <button mat-flat-button [disabled]="isClearing()" (click)="clearCache()">
             <mat-icon>delete_sweep</mat-icon>
             CLEAR CACHE
         </button>
