feat: add margin utility class and adjust layout in people component

--- a/src/app/pages/people/people.component.html
+++ b/src/app/pages/people/people.component.html
@@ -72,6 +72,7 @@
     <cdk-virtual-scroll-viewport class="virtual-scroll-viewport" [itemSize]="itemSize()" [minBufferPx]="minBufferPx"
       [maxBufferPx]="maxBufferPx">
 
+      <div class="margin">
       <!-- Apply different container classes based on viewMode() -->
       <div class="people-container" [ngClass]="{
         'large-grid': viewMode() === 'large' || viewMode() === 'grid',
@@ -83,6 +84,7 @@
         @for (pubkey of filteredPeople(); track pubkey) {
         <app-user-profile [pubkey]="pubkey" [view]="viewMode()" (click)="viewProfile(pubkey)"></app-user-profile>
         }
+      </div>
       </div>
 
     </cdk-virtual-scroll-viewport>
