--- a/src/styles.scss
+++ b/src/styles.scss
@@ -584,3 +584,11 @@ mat-card-content li {
 .settings-card {
   border-radius: 8px;
 }
+
+.padding {
+  padding: .6rem;
+}
+
+.margin {
+  margin: .6rem;
+}
