--- a/src/app/pages/people/people.component.html
+++ b/src/app/pages/people/people.component.html
@@ -28,6 +28,46 @@
         </mat-button-toggle-group>
       </div>
 
+      <!-- Filter button with menu -->
+      <button mat-icon-button [matMenuTriggerFor]="filterMenu" matTooltip="Filter options">
+        <mat-icon [class.active-filters]="hasActiveFilters()">filter_list</mat-icon>
+      </button>
+      
+      <mat-menu #filterMenu="matMenu" class="filter-menu">
+        <div class="filter-menu-header">
+          <span>Filter Options</span>
+          @if (hasActiveFilters()) {
+            <button mat-button color="primary" (click)="resetFilters()">Reset all</button>
+          }
+        </div>
+        <mat-divider></mat-divider>
+        
+        <div class="filter-section">
+          <h3>User Properties</h3>
+          <mat-checkbox [checked]="filters().hasRelayList" (change)="toggleFilter('hasRelayList')">
+            Has Relay List
+          </mat-checkbox>
+          <mat-checkbox [checked]="filters().hasFollowingList" (change)="toggleFilter('hasFollowingList')">
+            Has Following List
+          </mat-checkbox>
+          <mat-checkbox [checked]="filters().hasNip05" (change)="toggleFilter('hasNip05')">
+            Has Verified NIP-05
+          </mat-checkbox>
+        </div>
+        
+        <mat-divider></mat-divider>
+        
+        <div class="filter-section">
+          <h3>Display</h3>
+          <mat-checkbox [checked]="filters().hasPicture" (change)="toggleFilter('hasPicture')">
+            Has Profile Picture
+          </mat-checkbox>
+          <mat-checkbox [checked]="filters().hasBio" (change)="toggleFilter('hasBio')">
+            Has Bio
+          </mat-checkbox>
+        </div>
+      </mat-menu>
+
       <!-- Search input -->
       <div class="search-container">
         <mat-icon>search</mat-icon>
