--- a/src/styles.scss
+++ b/src/styles.scss
@@ -236,7 +236,7 @@ mat-card-content h3 {
   margin-top: 24px;
   margin-bottom: 12px;
   font-weight: 500;
-  color: var(--mat-sys-primary);
+  // color: var(--mat-sys-primary);
 }
 
 mat-card-content ul {
