--- a/src/app/components/storage-stats/storage-stats.component.html
+++ b/src/app/components/storage-stats/storage-stats.component.html
@@ -11,10 +11,10 @@
             <div class="stat-value">{{ stats().userMetadataCount }}</div>
             <div class="stat-label">User Profiles</div>
         </div> -->
-        <div class="stat-item">
+        <!-- <div class="stat-item">
             <div class="stat-value">{{ stats().userRelaysCount }}</div>
             <div class="stat-label">User Relay Lists</div>
-        </div>
+        </div> -->
         <div class="stat-item">
             <div class="stat-value">{{ formattedSize() }}</div>
             <div class="stat-label">Total Size</div>
