--- a/src/app/pages/people/people.component.html
+++ b/src/app/pages/people/people.component.html
@@ -46,7 +46,7 @@
           <h3>User Properties</h3>
           <mat-checkbox [checked]="filters().hasRelayList" (change)="toggleFilter('hasRelayList', $event)"
             (click)="preventPropagation($event)">
-            Has Relay List
+            Use Relay List
           </mat-checkbox>
           <mat-checkbox [checked]="filters().hasFollowingList" (change)="toggleFilter('hasFollowingList', $event)"
             (click)="preventPropagation($event)">
