--- a/src/app/pages/relays/relays.component.html
+++ b/src/app/pages/relays/relays.component.html
@@ -166,6 +166,12 @@
             <p>When you save Your Relays, they are additionally publishes to these Discovery Relays to help others discover You.</p>
           </mat-card-content>
         </mat-card>
+
+        
+        <!-- <br>
+        <button mat-flat-button color="primary" class="add-button" (click)="discoveryRelayTest()">
+          Connect to Discovery Relay (test)
+        </button> -->
       </div>
     </mat-tab>
   </mat-tab-group>
