feat: update routing and navigation to redirect to root instead of home

--- a/src/app/pages/learn/learn.component.html
+++ b/src/app/pages/learn/learn.component.html
@@ -63,7 +63,7 @@
   <div class="cta-section">
     <h2>Ready to get started?</h2>
     <div class="button-row">
-      <a mat-flat-button color="primary" routerLink="/home">Start Using Nostria</a>
+      <a mat-flat-button color="primary" routerLink="/">Start Using Nostria</a>
       <a mat-stroked-button routerLink="/about">About Nostria</a>
     </div>
   </div>
