--- a/src/app/pages/about/about.component.html
+++ b/src/app/pages/about/about.component.html
@@ -21,7 +21,7 @@
 
       <p class="description">
         Making the Nostr protocol accessible to everyone, with a focus on user experience and performance for
-        global scale. Let's make Nostr great again.
+        global scale. The Social Network That's Yours.
       </p>
 
       <h3>What is Nostria?</h3>
