Update the Nostria logos

--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -14,7 +14,7 @@
       </div>
     </div>
     <div class="hero-image">
-      <img src="icons/icon-384x384.png" alt="Nostria logo" />
+      <img src="icons/icon-3d-512x512.png" alt="Nostria logo" />
     </div>
   </section>
 
