--- a/src/app/pages/about/about.component.html
+++ b/src/app/pages/about/about.component.html
@@ -15,7 +15,7 @@
           <h3>Version: {{ version() }}</h3>
         </div>
         <div class="logo-container">
-          <img src="icons/icon-128x128.png" alt="Nostria Logo" class="logo">
+          <img src="icons/icon.svg" alt="Nostria Logo" class="logo">
         </div>
       </div>
 
