--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -39,43 +39,44 @@
     }
 
     <button class="notification-toolbar" mat-icon-button [matMenuTriggerFor]="menuNotifications">
-      <mat-icon [class.pulsing-icon]="hasActivePendingNotifications()" [matBadge]="unreadNotificationsCount()">notifications</mat-icon>
+      <mat-icon [class.pulsing-icon]="hasActivePendingNotifications()"
+        [matBadge]="unreadNotificationsCount()">notifications</mat-icon>
     </button>
 
     <mat-menu #menuNotifications="matMenu">
       @if (notificationService.notifications().length > 0) {
-        <!-- Display last 5 notifications -->
-        @for (notification of notificationService.notifications().slice(0, 5); track notification.id) {
-          <button mat-menu-item routerLink="/notifications">
-            <mat-icon>
-              @if (notification.type === notificationType.SUCCESS) {
-                check_circle
-              } @else if (notification.type === notificationType.GENERAL) {
-                info
-              } @else if (notification.type === notificationType.WARNING) {
-                warning
-              } @else if (notification.type === notificationType.ERROR) {
-                error
-              } @else if (notification.type === notificationType.RELAY_PUBLISHING) {
-                sync
-              } @else {
-                notifications
-              }
-            </mat-icon>
-            <span>{{ notification.title }}</span>
-            <div class="notification-details dimmed">{{ notification.timestamp | date:'short' }}</div>
-          </button>
-        }
-        <mat-divider></mat-divider>
-        <button mat-menu-item routerLink="/notifications">
-          <mat-icon>visibility</mat-icon>
-          <span>See all notifications</span>
-        </button>
+      <!-- Display last 5 notifications -->
+      @for (notification of notificationService.notifications().slice(0, 5); track notification.id) {
+      <button mat-menu-item routerLink="/notifications">
+        <mat-icon>
+          @if (notification.type === notificationType.SUCCESS) {
+          check_circle
+          } @else if (notification.type === notificationType.GENERAL) {
+          info
+          } @else if (notification.type === notificationType.WARNING) {
+          warning
+          } @else if (notification.type === notificationType.ERROR) {
+          error
+          } @else if (notification.type === notificationType.RELAY_PUBLISHING) {
+          sync
+          } @else {
+          notifications
+          }
+        </mat-icon>
+        <span>{{ notification.title }}</span>
+        <div class="notification-details dimmed">{{ notification.timestamp | date:'short' }}</div>
+      </button>
+      }
+      <mat-divider></mat-divider>
+      <button mat-menu-item routerLink="/notifications">
+        <mat-icon>visibility</mat-icon>
+        <span>See all notifications</span>
+      </button>
       } @else {
-        <button mat-menu-item routerLink="/notifications">
-          <mat-icon>notifications_off</mat-icon>
-          <span>No notifications</span>
-        </button>
+      <button mat-menu-item routerLink="/notifications">
+        <mat-icon>notifications_off</mat-icon>
+        <span>No notifications</span>
+      </button>
       }
       <mat-divider></mat-divider>
       <button mat-menu-item (click)="app.wipe()">
@@ -193,6 +194,10 @@
             <mat-icon matListItemIcon>key</mat-icon>
             <span>Credentials</span>
           </a>
+          <a mat-list-item routerLink="/settings" (click)="layout.isHandset() ? toggleProfileSidenav() : null">
+            <mat-icon matListItemIcon>settings</mat-icon>
+            <span>Settings</span>
+          </a>
           <a mat-list-item (click)="logout(); toggleProfileSidenav()">
             <mat-icon matListItemIcon>logout</mat-icon>
             <span>Logout</span>
@@ -237,6 +242,12 @@
           }
         </mat-nav-list>
         <mat-divider></mat-divider>
+        <mat-nav-list>
+          <a mat-list-item routerLink="/about" (click)="layout.isHandset() ? toggleProfileSidenav() : null">
+            <mat-icon matListItemIcon>info</mat-icon>
+            <span>About</span>
+          </a>
+        </mat-nav-list>
         }
       </div>
     </mat-sidenav>
